Add SDLFont class for text rendering with OpenGL and SDL_ttf
- Implemented SDLFont class to handle font loading, text rendering, and caching.
- Added vertex and fragment shaders for rendering text as textures.
- Integrated emoji font support with fallback mechanism.
- Created methods for initializing SDL_ttf, rendering text surfaces, and creating OpenGL textures from surfaces.
- Added caching mechanism for rendered text to optimize performance.
- Included necessary OpenGL and SDL2 headers and linked against required libraries.
- Added CMake configuration for freetype-gl library to support font rendering.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ project(${PROJECT_NAME})
 # --- Find required packages ---
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(SDL2 REQUIRED sdl2)
+pkg_check_modules(SDL2_TTF REQUIRED SDL2_ttf)
 find_package(Freetype REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(OpenGL REQUIRED)
@@ -31,7 +32,6 @@ set(SOURCES
     ${SRC_DIR}/Actor/TextActor.cpp
     ${SRC_DIR}/Component/Component/Component.cpp
     ${SRC_DIR}/Shader/Shader.cpp
-    ${SRC_DIR}/Font/SimpleFont.cpp
     ${SRC_DIR}/Core/Renderer/Renderer.cpp
     ${SRC_DIR}/Core/TextRenderer/TextRenderer.cpp
 )
@@ -42,6 +42,7 @@ add_executable(${PROJECT_NAME} ${SOURCES})
 target_include_directories(${PROJECT_NAME} PRIVATE
     ${SRC_DIR}
     ${SDL2_INCLUDE_DIRS}
+    ${SDL2_TTF_INCLUDE_DIRS}
     ${FREETYPE_INCLUDE_DIRS}
     ${GLEW_INCLUDE_DIRS}
 )
@@ -49,6 +50,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 # --- Link all necessary libraries ---
 target_link_libraries(${PROJECT_NAME} PRIVATE
     ${SDL2_LIBRARIES}
+    ${SDL2_TTF_LIBRARIES}
     ${FREETYPE_LIBRARIES}
     GLEW::glew
     OpenGL::GL
