Refactor font rendering system and remove deprecated classes
- Deleted SDLFont and SimpleFont classes, consolidating font management into FontManager.
- Implemented FontManager to handle loading and managing both text and emoji fonts using FreeType.
- Introduced RenderUtils for common rendering utilities, including screen clearing and texture binding.
- Updated Game class to utilize new text rendering features and set different text colors.
- Removed Shader and ShaderProgram classes, replacing them with a more streamlined shader management approach.
- Ensured compatibility with OpenGL and improved shader loading and compilation error handling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,8 @@ set(SOURCES
     ${SRC_DIR}/Actor/Actor.cpp
     ${SRC_DIR}/Actor/TextActor.cpp
     ${SRC_DIR}/Component/Component/Component.cpp
-    ${SRC_DIR}/Shader/Shader.cpp
+    ${SRC_DIR}/Shader/ShaderProgram.cpp
+    ${SRC_DIR}/Font/FontManager.cpp
     ${SRC_DIR}/Core/Renderer/Renderer.cpp
     ${SRC_DIR}/Core/TextRenderer/TextRenderer.cpp
 )
