Add player components for input, movement, animation, and sprite handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,10 @@ set(SOURCES
     ${SRC_DIR}/Map/TileMap.cpp
     ${SRC_DIR}/Map/TiledParser.cpp
     ${SRC_DIR}/Component/Component.cpp
+    ${SRC_DIR}/Component/PlayerInputComponent.cpp
+    ${SRC_DIR}/Component/MovementComponent.cpp
+    ${SRC_DIR}/Component/AnimationComponent.cpp
+    ${SRC_DIR}/Component/SpriteComponent.cpp
     ${SRC_DIR}/Shader/ShaderProgram.cpp
     ${SRC_DIR}/Font/FontManager.cpp
     ${SRC_DIR}/Core/Renderer/Renderer.cpp
