Refactor NPC system: create base NPC class, update DialogNPC and PatrolNPC to inherit from NPC, and adjust sprite loading for new character tilesets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ set(SOURCES
     ${SRC_DIR}/Actor/TextActor.cpp
     ${SRC_DIR}/Actor/ItemActor.cpp
     ${SRC_DIR}/Actor/Player.cpp
+    ${SRC_DIR}/Actor/NPC/NPC.cpp
     ${SRC_DIR}/Actor/NPC/DialogNPC.cpp
     ${SRC_DIR}/Actor/NPC/TestShopkeeperNPC.cpp
     ${SRC_DIR}/Actor/NPC/PatrolNPC.cpp
