Refactor NPC System: Restructure Dialog and Patrol NPC Classes
- Removed TestShopkeeperNPC and its header file, integrating its functionality into the new DialogNPC base class.
- Created a new base class DialogNPC to handle dialog interactions and trade offers.
- Implemented the DialogNPC class with methods for managing dialog options and trade offers.
- Updated PatrolNPC class to include state management for patrolling, chasing, and returning behaviors.
- Introduced TestAggressivePatrolNPC and TestPassivePatrolNPC classes for testing aggressive and passive NPC behaviors.
- Updated Game.cpp to reflect new class structure and include paths.
- Added detailed implementations for TestShopkeeperNPC, TestAggressivePatrolNPC, and TestPassivePatrolNPC.
- Enhanced interaction handling in DialogNPC to support multiple dialog options and trade mechanics.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,12 +41,12 @@ set(SOURCES
     ${SRC_DIR}/Actor/TextActor.cpp
     ${SRC_DIR}/Actor/ItemActor.cpp
     ${SRC_DIR}/Actor/Player.cpp
-    ${SRC_DIR}/Actor/NPC/NPC.cpp
-    ${SRC_DIR}/Actor/NPC/DialogNPC.cpp
-    ${SRC_DIR}/Actor/NPC/TestShopkeeperNPC.cpp
-    ${SRC_DIR}/Actor/NPC/PatrolNPC.cpp
-    ${SRC_DIR}/Actor/NPC/TestPassivePatrolNPC.cpp
-    ${SRC_DIR}/Actor/NPC/TestAggressivePatrolNPC.cpp
+    ${SRC_DIR}/Actor/NPC/Base/NPC.cpp
+    ${SRC_DIR}/Actor/NPC/Base/DialogNPC.cpp
+    ${SRC_DIR}/Actor/NPC/Base/PatrolNPC.cpp
+    ${SRC_DIR}/Actor/NPC/Concrete/TestShopkeeperNPC.cpp
+    ${SRC_DIR}/Actor/NPC/Concrete/TestPassivePatrolNPC.cpp
+    ${SRC_DIR}/Actor/NPC/Concrete/TestAggressivePatrolNPC.cpp
     ${SRC_DIR}/Map/TileMap.cpp
     ${SRC_DIR}/Map/TiledParser.cpp
     ${SRC_DIR}/Component/Component.cpp
