--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ set(SOURCES
     ${SRC_DIR}/Actor/NPC/Concrete/TestShopkeeperNPC.cpp
     ${SRC_DIR}/Actor/NPC/Concrete/TestPassivePatrolNPC.cpp
     ${SRC_DIR}/Actor/NPC/Concrete/TestAggressivePatrolNPC.cpp
+    ${SRC_DIR}/Actor/NPC/Concrete/CatNPC.cpp
     ${SRC_DIR}/Map/TileMap.cpp
     ${SRC_DIR}/Map/TiledParser.cpp
     ${SRC_DIR}/Component/Component.cpp
