feat: Add NPC functionality with JSON integration and dialog system
- Introduced a new NPC system with GenericNPC class to handle NPC behavior and interactions.
- Implemented loading NPC data from JSON files, including attributes like name, position, dialogues, and quests.
- Enhanced the dialog UI to support dynamic facesets for NPCs, improving visual feedback during interactions.
- Updated the crafting recipes in recipes.json to include new items and results.
- Modified the attack component to comment out debug logging for cleaner output during gameplay.
- Adjusted the dialog UI layout and textures for better aesthetics and usability.
- Added a new tileset for dialog box facesets to support the updated UI design.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ set(SOURCES
     ${SRC_DIR}/Actor/NPC/Concrete/TestPassivePatrolNPC.cpp
     ${SRC_DIR}/Actor/NPC/Concrete/TestAggressivePatrolNPC.cpp
     ${SRC_DIR}/Actor/NPC/Concrete/CatNPC.cpp
+    ${SRC_DIR}/Actor/NPC/Concrete/GenericNPC.cpp
     ${SRC_DIR}/Map/TileMap.cpp
     ${SRC_DIR}/Map/TiledParser.cpp
     ${SRC_DIR}/Component/Component.cpp
